# reddit-growth-mcp

./: .dockerignore  .env.sample  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  WARP.md  glama.json  pyproject.toml  reddit-mcp-install prompts.rtf  server.json  smithery.yaml
.github/workflows/: ci.yml  publish-mcp.yml
ai-docs/: DISCOVERY_TOOLS_GUIDE.md
ai-docs/fastmcp3/: MIGRATION-SUMMARY.md  context.md  index.md
scripts/: banner.txt  boom_test.sh  demo-capture.sh  demo.sh  demo.tape  lib.sh  menu.sh  smoke_test.sh  today_viral.sh
scripts/win/: compare.sh  draft.sh  patterns.sh  plan.sh
specs/: 003-fastmcp-context-integration.md  003-implementation-summary.md  003-phase-1-context-integration.md  003-phase-2-progress-monitoring.md  004-api-parameter-consistency.md  005-python-sdk-plan.md  006-fastmcp3-migration.md  PHASE_2A_IMPLEMENTATION_SUMMARY.md  VECTOR_DB_ANALYSIS.md  VECTOR_DB_INDEX.md  VECTOR_DB_QUICK_REF.txt  VECTOR_DB_SUMMARY.md  openai-apps-sdk-compatibility.md
specs/external-sdks/: openai-apps-sdk-comprehensive-guide.md
src/: chroma_client.py  cli.py  config.py  models.py  resources.py  server.py
src/analysis/: __init__.py  acceptance.py  arctic.py  compare.py  constants.py  draft.py  helpers.py  insight.py  patterns.py  plan.py  traffic.py
src/auth/: __init__.py  multi_issuer_verifier.py
src/tools/: __init__.py  comments.py  discover.py  feed.py  posts.py  search.py
tests/: test_acceptance.py  test_arctic.py  test_cli.py  test_compare.py  test_context_integration.py  test_draft.py  test_helpers.py  test_insight.py  test_patterns.py  test_phase_2a.py  test_plan.py  test_resources.py  test_tools.py
