[project]
name = "reddit-analyzer"
version = "0.1.0"
description = "Subreddit traffic and post-pattern analysis toolkit"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name="latent-9", email="latentofmythos@gmail.com" },
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.12.15",
    "praw>=7.7.1",
    "fastmcp>=3.0.0,<4",
    "httpx>=0.27.0",
    "openai-agents>=0.2.8",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.32.0",
    "uvicorn>=0.30.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/latent-9/reddit-analyzer"
Repository = "https://github.com/latent-9/reddit-analyzer"
Issues = "https://github.com/latent-9/reddit-analyzer/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
reddit-analyzer = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
