[project]
name = "reddit-growth-mcp"
version = "0.2.1"
description = "Subreddit traffic and post-pattern analysis toolkit"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name="latent-9", email="latentofmythos@gmail.com" },
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "praw>=7.7.1",
    "fastmcp>=3.0.0,<4",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/latent-9/reddit-growth-mcp"
Repository = "https://github.com/latent-9/reddit-growth-mcp"
Issues = "https://github.com/latent-9/reddit-growth-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Entry points set up sys.path / load environment before importing modules.
"src/server.py" = ["E402"]
"src/cli.py" = ["E402"]

[project.scripts]
reddit-growth-mcp = "src.server:main"
reddit-growth = "src.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
